[metadata]
name = edm_tool
version = attr: edm_tool.__version__
description= A simple dependency manager
long_description = file: README.md
long_description_content_type= text/markdown
url= https://github.com/EVerest/everest-dev-environment
author = Kai-Uwe Hermann
author_email = kai-uwe.hermann@pionix.de
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License

[options]
packages = edm_tool
package_dir =
    = src
python_requires = >=3.6
install_requires =
    Jinja2>=2.11
    PyYAML>=5.3
    requests>=2

[options.entry_points]
console_scripts =
    edm = edm_tool:main

[options.package_data]
edm_tool =
    templates/cpm.jinja
    cmake/CPM.cmake
    cmake/EDMConfig.cmake
    edm-completion.bash

[pycodestyle]
max-line-length = 120
