add_subdirectory(can_dpm1000)
add_subdirectory(cbv2g)
add_subdirectory(conversions)
add_subdirectory(crc)
add_subdirectory(everest_api_types)
add_subdirectory(evse_security)
add_subdirectory(external_energy_limits)
add_subdirectory(framework)
add_subdirectory(fsm)
add_subdirectory(helpers)
add_subdirectory(ieee2030_1_1)
add_subdirectory(iso15118)
add_subdirectory(log)
add_subdirectory(ocpp)
add_subdirectory(run_application)
add_subdirectory(slac)
add_subdirectory(sqlite)
add_subdirectory(timer)
add_subdirectory(tls)
add_subdirectory(util)
add_subdirectory(io)

if(EVEREST_DEPENDENCY_ENABLED_EVEREST_GPIO)
    add_subdirectory(gpio)
endif()

if(EVEREST_DEPENDENCY_ENABLED_SDBUS_CPP)
    add_subdirectory(system)
endif()
