load("//applications/utils:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("//third-party/bazel/toolchains:defs.bzl", "CROSS_PYTHON_INCOMPATIBLE")

exports_files(
    ["BUILD.bazel"],
)

py_library(
    name = "lib",
    srcs = glob(["src/ev_cli/*.py"]),
    imports = ["src"],
    target_compatible_with = CROSS_PYTHON_INCOMPATIBLE,
    deps = [
        requirement("jinja2"),
        requirement("jsonschema"),
        requirement("stringcase"),
        requirement("pyyaml"),
    ],
)

py_binary(
    name = "ev-cli",
    srcs = ["src/ev_cli/ev.py"],
    data = glob(["src/ev_cli/templates/**"]),
    legacy_create_init = False,
    main = "src/ev_cli/ev.py",
    visibility = ["//visibility:public"],
    target_compatible_with = CROSS_PYTHON_INCOMPATIBLE,
    deps = [":lib"],
)
