[metadata]
name = ev-dev-tools
version = attr: ev_cli.__version__
author = aw
author_email = aw@pionix.de
description = Utilities for developing with the everest framework
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/EVerest/everest-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires =
    jinja2
    jsonschema
    stringcase
    pyyaml
package_dir =
    = src
packages = ev_cli
python_requires = >=3.7

[options.entry_points]
console_scripts =
    ev-cli = ev_cli.ev:main

[options.package_data]
ev_cli =
    templates/*.j2
    licenses/**

