[metadata]
name = everest-testing
version = attr: everest.testing.__version__
author = Piet Gömpel
author_email = piet.goempel@pionix.de
description = Utilities for testing EVerest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EVerest/everest-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires =
    pytest
    pytest-asyncio
    python-dateutil
    paho-mqtt >=2.0
    pyftpdlib
    ocpp ==2.1.0
    websockets
    pyOpenSSL
    pyyaml
    cryptography ==41.0.1

package_dir =
    = src

python_requires = >=3.8
